@@ -4,3 +4,4 @@ opencv-contrib-python==4.7.0.68
 packaging==23.0
 Pillow==9.4.0
 pytesseract==0.3.10
+inquirer==3.1.2
